--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,41 @@
       <h2> <em> FullStack Developer </em></h2>
   </div>
 
+  <div class="skills">
+    <h1 style='color: white;'>Technical Skills</h1>
+    <br>
+    <br>
+    <div class="skills-container">
+      <ul>
+        <li> Ruby </li>
+        <li> Ruby on Rails</li>
+        <li> SQL (Postgresql)</li>
+        <li> CSS 3 </li>
+        <li> SCSS</li>
+        <li> Redis</li>
+        <li> Figma</li>
+        <li> Sideqik</li>
+      </ul>
+      <ul>
+        <li> Javascript ES5, ES6</li>
+        <li> Node.js </li>
+        <li> Bootstrap </li>
+        <li> Git </li>
+        <li> Heroku </li>
+        <li> REACT </li>
+        <li> HTML 5 </li>
+      </ul>
+      <ul>
+        <li>GDPR Compliance</li>
+        <li>Google Analytics</li>
+        <li>Pack Office</li>
+        <li>Mailchimp</li>
+        <li>Google Adwords</li>
+        <li>Cookie Management</li>
+      </ul>
+    </div>
+  </div>
+
 
   <div class="animation-wrapper">
     <div class="sphere-animation">
@@ -49,10 +84,19 @@
 
 
   <div class="work row">
+    <h1>Work</h1>
+
+
     <div class="barly-main-wrap">
       <div class="barly-title">
         <h3><strong>Barly</strong></h3>
         <p> <em> A Ruby on Rails app allowing customers to order drinks from their table in participating pubs. </em></p>
+        <div class="tech-specs">
+            <li>Framework: Ruby on Rails</li>
+            <li>Object Relation Mapping:  Active Records</li>
+            <li>Languages Used: Ruby, Javascript</li>
+        </div>
+        </p>
       </div>
       <div class="barly-sides">
         <div>
@@ -80,6 +124,8 @@
         </div>
       </div>
     </div>
+
+
   </div>
 
 <div class="details">
@@ -88,3 +134,9 @@
 
 
 <div id="container"></div>
+
+<footer>
+  <p style="color: white;">
+  Website made by Pierre-Emmanuel Tanguy
+  </p>
+</footer>
