--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,17 +12,39 @@
 @import "components/index";
 @import "pages/index";
 @import "./sphere";
+@import "./barly";
+@import "./color-change";
+// @import "./particles";
 
 
+li {
+  color: white;
+  list-style-type: none;
+}
 .container {
- background-color: #000000;
+ // background-color: #000000;
  z-index:1;
  display:flex;
   flex-direction: column;
   align-items:center;
   justify-content:center;
-border-radius: 60%;
+// border-radius: 60%;
 
+}
+
+.skills {
+  position: absolute;
+  top: 32%;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.skills-container {
+  display: flex;
+  justify-content: space-around;
 }
 
 // canvas {
@@ -65,6 +87,13 @@ body {
   position: absolute;
   z-index: 1;
   color: white;
-  top: 24%;
-  left: 38%;
+  top: 17%;
+  left: 39%;
+}
+
+
+.tech-specs {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
