--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -109,7 +109,8 @@
       <div class="barly-wrap">
         <div class="work-Barly">
           <div class="">
-
+            <%= cl_image_tag("https://res.cloudinary.com/dmna3arnm/image/upload/v1579876085/portfolio/Screenshot_2020-01-24_at_14.09.49_m4c1v8.png",
+                  width: 150, heigh: 250 ,crop: :fill) %>
           </div>
           <div class="">
 
@@ -117,7 +118,8 @@
         </div>
         <div class="work-Barly">
           <div class="">
-
+            <%= cl_image_tag("https://res.cloudinary.com/dmna3arnm/image/upload/v1579874693/portfolio/barly_dashboard_ugunoy.gif",
+                 width: 300, heigh: 500 ,crop: :fill) %>
           </div>
         </div>
       </div>
@@ -134,7 +136,7 @@
 <div id="container"></div>
 
 <footer>
-  <p style="color: white;">
+  <h2 style="color: white;">
   Website made by Pierre-Emmanuel Tanguy
-  </p>
+  </h2>
 </footer>
