--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,27 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+      <script language="Javascript">
+    window.onload=function(){
+    var mobile = (/iphone|ipad|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));
+    if (mobile) {
+        document.getElementsByTagName('body')[0].innerHTML = '';
+        const text = `<br><br><br><div style="display: flex; flex-direction: column; text-align:center; justify-content: center;"><h3 style="color: white;"> Go to </h3> <a href="www.petanguy.com">www.petanguy.com</a> <h3 style="color: white;"> on a laptop device to get an optimal display.</h3><div>`
+        document.getElementsByTagName('body')[0].innerHTML = text;
+
+    } else {
+
+    }
+  }
+  </script>
   </head>
   <body>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
 
     <%= javascript_pack_tag 'application' %>
+
   </body>
 </html>
+
+
