--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     var mobile = (/iphone|ipad|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));
     if (mobile) {
         document.getElementsByTagName('body')[0].innerHTML = '';
-        const text = `<br><br><br><div style="display: flex; flex-direction: column; text-align:center; justify-content: center;"><h3 style="color: white;"> Go to </h3> <a href="www.petanguy.com">www.petanguy.com</a> <h3 style="color: white;"> on a laptop device to get an optimal display.</h3><div>`
+        const text = `<br><br><br><div style="display: flex; flex-direction: column; text-align:center; justify-content: center;"><h3 style="color: white;"> Go to </h3> <a href="http://www.petanguy.com">www.petanguy.com</a> <h3 style="color: white;"> on a laptop device to get an optimal display.</h3><div>`
         document.getElementsByTagName('body')[0].innerHTML = text;
 
     } else {
