--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -92,9 +92,18 @@
         <h3><strong>Barly</strong></h3>
         <p> <em> A Ruby on Rails app allowing customers to order drinks from their table in participating pubs. </em></p>
         <div class="tech-specs">
-            <li>Framework: Ruby on Rails</li>
-            <li>Object Relation Mapping:  Active Records</li>
-            <li>Languages Used: Ruby, Javascript</li>
+          <div class="specs">
+            <p>Framework:</p> <p style="color: #c90d00;">Ruby on Rails</p>
+          </div>
+          <div class="specs">
+            <p>Object Relation Mapping:</p> <p style="color: #c90d00;"> Active Records</p>
+          </div>
+          <div class="specs">
+            <p>Languages Used:</p> <p style="color: #c90d00;"> Ruby, Javascript, HTML, SCSS</p>
+          </div>
+          <div class="specs">
+            <p>Database: </p> <p style="color: #c90d00;">PostgreSQL, ACID</p>
+          </div>
         </div>
         </p>
       </div>
@@ -136,7 +145,7 @@
 <div id="container"></div>
 
 <footer>
-  <h2 style="color: white;">
+  <p style="color: white;">
   Website made by Pierre-Emmanuel Tanguy
-  </h2>
+  </p>
 </footer>
