added a lot of js, didnt implement yet. files are here. hid overflow-x.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
     var mobile = (/iphone|ipad|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));
     if (mobile) {
         document.getElementsByTagName('body')[0].innerHTML = '';
-        const text = `<br><br><br><div style="display: flex; flex-direction: column; text-align:center; justify-content: center; padding: 5%;"><h3 style="color: white; font-family: 'Quicksand', sans-serif;"> Go to </h3> <a href="http://www.petanguy.com"><h3>www.petanguy.com</h3></a> <h3 style="color: white; font-family: 'Quicksand', sans-serif;"> on a laptop device to get an optimal display.</h3><div>`
+        const text = `<br><br><br><div style="display: flex; flex-direction: column; text-align:center; justify-content: center; padding: 5%;"><h3 style="color: white; font-family: 'Quicksand', sans-serif;"> Go to </h3> <a href="http://www.petanguy.com"><h3>www.petanguy.com</h3></a> <h3 style="color: white; font-family: 'Quicksand', sans-serif;"> on a laptop device to get an optimal display.</h3></div><div id="pong">
+                    `
         document.getElementsByTagName('body')[0].innerHTML = text;
 
     } else {
@@ -25,11 +26,14 @@
   </script>
   <body>
     <%= yield %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
+
     <%= javascript_include_tag 'application' %>
 
     <%= javascript_pack_tag 'application' %>
 
   </body>
+
 </html>
 
 
