--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "./sphere";
 @import "./barly";
 @import "./color-change";
+@import "./svg-lines";
 // @import "./particles";
 
 
@@ -66,6 +67,7 @@ body {
   position: absolute;
   width: 100%;
   background-color: #000000;
+  overflow-x: hidden;
   // height: 100vh;
   margin: 0;
   padding: 0;
@@ -100,4 +102,29 @@ h3 {
 }
 
 
+
+// .cont-pong {
+//   width: 500px;
+//   display: inline-block;
+//   transform: translateY(200px);
+//  }
+// .bar {
+//   background: #FFFFFF;
+//   width: 10px;
+//   height: 100px;
+// }
+// .bar1 {
+//   float: left;
+// }
+// .bar2 {
+//   float: right;
+// }
+// .ball {
+//   background: #FFFFFF;
+//   width: 10px;
+//   height: 10px;
+//   position: relative;
+//   top: 45px;
+//   left: 10px;
+// }
 
