--- a/app/assets/stylesheets/particles.scss
+++ b/app/assets/stylesheets/particles.scss
@@ -1,10 +1,10 @@
 
 #container{
 
-  background: #111;
+  // background: #111;
   position: absolute;
   opacity: 0;
-  z-index: 1;
+  z-index: 2;
   // left: 10%;
   width: 100%;
   top: 50%;
