--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="skills">
-    <h1 style='color: white;'>Technical Skills</h1>
+    <h1 style='color: white;'>TECHNICAL SKILLS</h1>
     <br>
     <br>
     <div class="skills-container">
@@ -43,6 +43,9 @@
       </ul>
     </div>
   </div>
+      <br>
+      <br>
+      <br>
 
 
   <div class="animation-wrapper">
@@ -85,9 +88,11 @@
 
 
   <div class="work row">
-    <h1>Work</h1>
-
-
+    <h1>WORK</h1>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="barly-main-wrap">
       <div class="barly-title">
         <h3><strong>Barly</strong></h3>
@@ -117,13 +122,14 @@
         </div>
       </div>
       <div class="barly-wrap">
-        <div class="work-Barly">
-          <div class="">
+        <div class="work-Barly-user">
+          <div class="user-barly">
             <%= cl_image_tag("https://res.cloudinary.com/dmna3arnm/image/upload/v1579876085/portfolio/Screenshot_2020-01-24_at_14.09.49_m4c1v8.png",
                   width: 150, heigh: 250 ,crop: :fill) %>
           </div>
-          <div class="">
-
+          <div class="user-barly">
+            <%= cl_image_tag("https://res.cloudinary.com/dmna3arnm/image/upload/v1580068898/portfolio/Screenshot_2020-01-26_at_20.01.10_cmkqkx.png",
+                  width: 150, heigh: 250 ,crop: :fill) %>
           </div>
         </div>
         <div class="work-Barly">
