--- a/app/assets/stylesheets/color-change.scss
+++ b/app/assets/stylesheets/color-change.scss
@@ -11,43 +11,43 @@
 }
 
 $bright-red: #ff968f;
-$medium-red: #c90d00;
-$dark-red: #850900;
+$medium-red: #de0f00;
+
 
 
 
 @-webkit-keyframes color-change {
-    0% { color: $dark-red; }
+    0% { color: $white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $dark-red; }
+    100% { color: $white; }
 
 }
 @-moz-keyframes color-change {
-    0% { color: $dark-red; }
+    0% { color: $white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    99% { color: $dark-red; }
+    100% { color: $white; }
 
 }
 @-ms-keyframes color-change {
-    0% { color: $dark-red; }
+    0% { color: $white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    99% { color: $dark-red; }
+    100% { color: $white; }
 
 }
 @-o-keyframes color-change {
-    0% { color: $dark-red; }
+    0% { color: $white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    99% { color: $dark-red; }
+    100% { color: $white; }
 
 }
 @keyframes color-change {
-    0% { color: $dark-red; }
+    0% { color: $white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $dark-red; }
+    100% { color: $white; }
 
 }
