--- a/app/assets/stylesheets/color-change.scss
+++ b/app/assets/stylesheets/color-change.scss
@@ -17,31 +17,31 @@ $medium-red: #de0f00;
 
 
 @-webkit-keyframes color-change {
-    0% { color: $white; }
+    0% { color: white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $white; }
+    100% { color: white; }
 
 }
 @-moz-keyframes color-change {
-    0% { color: $white; }
+    0% { color: white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $white; }
+    100% { color: white; }
 
 }
 @-ms-keyframes color-change {
-    0% { color: $white; }
+    0% { color: white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $white; }
+    100% { color: white; }
 
 }
 @-o-keyframes color-change {
-    0% { color: $white; }
+    0% { color: white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $white; }
+    100% { color: white; }
 
 }
 @keyframes color-change {
