scss bug fixed 2.

--- a/app/assets/stylesheets/color-change.scss
+++ b/app/assets/stylesheets/color-change.scss
@@ -48,6 +48,6 @@ $medium-red: #de0f00;
     0% { color: $white; }
     33% { color: $bright-red; }
     66% { color: $medium-red; }
-    100% { color: $white; }
+    100% { color: white; }
 
 }
