--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@ li {
 .container {
  // background-color: #000000;
  z-index:1;
- display:flex;
+ display: flex;
   flex-direction: column;
   align-items:center;
   justify-content:center;
@@ -36,7 +36,7 @@ li {
 .skills {
   position: absolute;
   top: 32%;
-  z-index: 1;
+  right: 34%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,17 +50,9 @@ li {
   padding: 5%;
 }
 
-// canvas {
-//   left: 20%;
-// }
-
 html { background-color: #000000; }
 
-// .container{
-//   // background-color: #000000;
-//   position:absolute;
-//   z-index: -2;
-// }
+
 body {
   font-family: 'Quicksand', sans-serif;  display: flex;
   justify-content: center;
